WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250810
HTMLMediaElement doesn't initialize m_currentIdentifier, leading to a crash
https://bugs.webkit.org/show_bug.cgi?id=250810
Summary
HTMLMediaElement doesn't initialize m_currentIdentifier, leading to a crash
Chirag M Shah
Reported
2023-01-18 16:39:56 PST
rdar://104278707
Attachments
Add attachment
proposed patch, testcase, etc.
Chirag M Shah
Comment 1
2023-01-18 16:52:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8808
EWS
Comment 2
2023-01-19 10:48:50 PST
Committed
259097@main
(56a5e513db94): <
https://commits.webkit.org/259097@main
> Reviewed commits have been landed. Closing PR #8808 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug