Cherry-pick 259097@main (56a5e513db94). https://bugs.webkit.org/show_bug.cgi?id=250810

Fix crash when a video without source is played without loading
    https://bugs.webkit.org/show_bug.cgi?id=250810
    rdar://104278707

    Reviewed by Jer Noble.

    Before this change, we used to initialize m_currentIdentifier only when
    source was set on a HTMLElement, or when we are preloading content,
    which resulted in a crash when none of those happened because we would
    send an empty object identifier across IPC. This change fixes that.

    * LayoutTests/http/tests/media/video-play-without-load-expected.txt: Added.
    * LayoutTests/http/tests/media/video-play-without-load.html: Added.
    * Source/WebCore/html/HTMLMediaElement.cpp:
    (WebCore::HTMLMediaElement::HTMLMediaElement):

    Canonical link: https://commits.webkit.org/259097@main